--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"
-        tools:ignore="WrongManifestParent" />
+    <uses-permission android:name="android.permission.INTERNET"  />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
     <application
         android:name="com.example.utils.MyApplication"
         android:allowBackup="true"
@@ -25,7 +29,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name="com.example.grammar.asyncs.MyIntentService"
+        <service android:name="com.example.grammar.async.MyIntentService"
                  android:exported="true"
             tools:ignore="Instantiatable">
             <intent-filter >
