--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
-    <instrumentation
-        android:name="com.example.hello.MyInstrumentation"
-        android:targetPackage="com.example.hello"
-        android:functionalTest="false"
-        android:handleProfiling="false" />
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -28,7 +22,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".LoginActivity"
+            android:name="com.example.viewpage.TabRootActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
