--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name="com.example.viewpage.TabRootActivity"
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,7 +31,7 @@
         </activity>
 
         <activity android:name="feature.productlist.presentation.ProductActivity" />
-
+        <activity android:name="com.example.viewpage.TabRootActivity" />
 
     </application>
 
