--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         </activity>
 
         <activity android:name="feature.productlist.presentation.ProductActivity" />
-        <activity android:name="feature.viewpage.TabRootActivity" />
+        <activity android:name="feature.tabroot.TabRootActivity" />
 
     </application>
 
