调整目录结构

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="feature.productlist.presentation.ProductActivity" />
+        <activity android:name="feature.productlist.ProductActivity" />
         <activity android:name="feature.tabroot.TabRootActivity" />
 
     </application>
